force-app/main/default/objects/Ingreso_a_taller__c/Ingreso_a_taller__c.object-meta.xml
<CustomObject>
    <description>En este objeto se maneja la información de todos los Vehículos ingresados al taller. Se tiene una información básica donde se recibe del UNOEE la fecha de ingreso y un ítem de descripción de servicio. La información registrada aquí es de carácter informativo y no puede ser modificada manualmente.</description>
    <label>Ingreso a taller</label>
    <nameField>
        <label>Nombre de Ingreso a taller</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ingreso a talleres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>