force-app/main/default/objects/Ingreso_a_taller__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ingreso a talleres</relationshipLabel>
    <relationshipName>Ingreso_a_talleres</relationshipName>
    <type>Lookup</type>
</CustomField>