force-app/main/default/objects/Ingreso_a_taller__c/fields/Fecha_de_asistencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_asistencia__c</fullName>
    <label>Fecha de asistencia</label>
    <type>Date</type>
</CustomField>