force-app/main/default/objects/Ingreso_a_taller__c/fields/Fecha_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Factura__c</fullName>
    <description>Fecha creación de factura</description>
    <inlineHelpText>Fecha creación de factura</inlineHelpText>
    <label>Fecha de Factura</label>
    <type>Date</type>
</CustomField>