force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Cuenta_Correo__c.field-meta.xml
<CustomField>
    <fullName>MC_Cuenta_Correo__c</fullName>
    <formula>IF( CONTAINS( Vehiculo__r.Account.RecordType.Name , &quot;Juridica&quot;),  Vehiculo__r.Account.MC_Correo_electronico_Empresa__c ,  Vehiculo__r.Account.PersonContact.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Cuenta Correo</label>
    <type>Text</type>
</CustomField>