force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Cuenta_Tel__c.field-meta.xml
<CustomField>
    <fullName>MC_Cuenta_Tel__c</fullName>
    <formula>IF( CONTAINS(Vehiculo__r.Account.RecordType.Name, &quot;Juridica&quot;), Vehiculo__r.Account.Phone,  Vehiculo__r.Account.PersonContact.MobilePhone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Cuenta Tel</label>
    <type>Text</type>
</CustomField>