force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Cuenta_Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>MC_Cuenta_Tipo_Cliente__c</fullName>
    <formula>TEXT(Vehiculo__r.Account.AM_Tipo_de_usuario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Cuenta Tipo Cliente</label>
    <type>Text</type>
</CustomField>