force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Nomb_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>MC_Nomb_Cuenta__c</fullName>
    <formula>IF( CONTAINS( Vehiculo__r.Account.RecordType.Name , &quot;Juridica&quot;),  Vehiculo__r.Account.Name ,  Vehiculo__r.Account.FirstName  &amp;&quot; &quot;&amp;  Vehiculo__r.Account.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Nomb Cuenta</label>
    <type>Text</type>
</CustomField>