force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Segmentacion_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>MC_Segmentacion_de_la_Cuenta__c</fullName>
    <formula>TEXT(Vehiculo__r.Account.Segmentacion2__c)</formula>
    <label>MC Segmentación de la Cuenta</label>
    <type>Text</type>
</CustomField>