force-app/main/default/objects/Ingreso_a_taller__c/fields/MC_Vehiculo_Nomb__c.field-meta.xml
<CustomField>
    <fullName>MC_Vehiculo_Nomb__c</fullName>
    <formula>Vehiculo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Vehículo Nomb</label>
    <type>Text</type>
</CustomField>