force-app/main/default/objects/Ingreso_a_taller__c/fields/Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documento__c</fullName>
    <label>Número de documento</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>