force-app/main/default/objects/Ingreso_a_taller__c/fields/Quien_atiende_el_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Quien_atiende_el_vehiculo__c</fullName>
    <label>Quién atiende el vehículo</label>
    <length>90</length>
    <type>Text</type>
</CustomField>