force-app/main/default/objects/Ingreso_a_taller__c/fields/Servicio_prestado__c.field-meta.xml
<CustomField>
    <fullName>Servicio_prestado__c</fullName>
    <label>Servicio prestado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>