force-app/main/default/objects/Ingreso_a_taller__c/fields/SurveyInvCreated__c.field-meta.xml
<CustomField>
    <fullName>SurveyInvCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SurveyInvCreated</label>
    <type>Checkbox</type>
</CustomField>