force-app/main/default/objects/Ingreso_a_taller__c/fields/Tipo_de_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Vehiculo__c</fullName>
    <label>Tipo de Vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehiculo Honda</fullName>
            </value>
            <value>
                <fullName>Vehiculo Otras marcas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>