force-app/main/default/objects/Ingreso_a_taller__c/fields/Valor_neto__c.field-meta.xml
<CustomField>
    <fullName>Valor_neto__c</fullName>
    <description>Valor final calculado en UNOEE, valor bruto - descuentos</description>
    <label>Valor neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>