force-app/main/default/objects/Ingreso_a_taller__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehículo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ingreso a talleres</relationshipLabel>
    <relationshipName>Ingreso_a_talleres</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>