force-app/main/default/objects/Ingreso_a_taller__c/fields/Vinculo_de_la_encuesta__c.field-meta.xml
<CustomField>
    <fullName>Vinculo_de_la_encuesta__c</fullName>
    <label>Vínculo de la encuesta</label>
    <type>Url</type>
</CustomField>