force-app/main/default/objects/Ingreso_a_taller__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Servicio_prestado__c</columns>
    <columns>Fecha_de_asistencia__c</columns>
    <columns>Numero_de_documento__c</columns>
    <columns>Fecha_de_Factura__c</columns>
    <columns>Valor_neto__c</columns>
    <columns>Vehiculo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>